# stripe_project

./: .gitignore  README.md  db.sqlite3  pyproject.toml
pay_system/: admin.py  models.py  urls.py  views.py
pay_system/migrations/: 0001_initial.py
stripe_project/: asgi.py  env.example  settings.py  urls.py  wsgi.py
templates/: item_list.html  show.html
