[tool.poetry]
name = "stripe-project"
version = "0.1.0"
description = ""
authors = ["sicrit1 <zapadin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.3"
stripe = "^5.0.0"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
